--- a/src/notesOne/index.html
+++ b/src/notesOne/index.html
@@ -5,19 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="./src/index.css" /> -->
-    <!-- <link rel="stylesheet" href="./src/components/header/Header.css" />
+    <link rel="stylesheet" href="./src/components/header/Header.css" />
     <link rel="stylesheet" href="./src/components/table/Table.css" />
-    <link rel="stylesheet" href="./src/components/cards/Cards.css" /> -->
+    <link rel="stylesheet" href="./src/components/cards/Cards.css" />
   </head>
   <body>
-    <div id="root">
-      <!-- header component -->
-      <!-- table component -->
-      <!-- cards component -->
-    </div>
+    <!-- header component -->
+    <!-- table component -->
+    <!-- cards component -->
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
